Update Hotjar Support

--- a/src/pringuin/DataprivacyBundle/Resources/translations/admin.en.yml
+++ b/src/pringuin/DataprivacyBundle/Resources/translations/admin.en.yml
@@ -27,6 +27,8 @@ matomo_host_helptext: "The URL to your matomo installation"
 mautic_url: "Mautic URL"
 zopimID: "zopim ID"
 zopimID_helptext: "Set your ID for zopim here"
+hotjarId: "Hotjar ID"
+HotjarSv: "Hotjar SV"
 privacyUrl: "Privacy URL"
 privacyUrl_helptext: "If value is numeric, then will be taken Document by id."
 configuration_save_success: "Configuration for Site <b>%site%</b> saved successfully."
