--- a/src/pringuin/DataprivacyBundle/Resources/translations/admin.en.yml
+++ b/src/pringuin/DataprivacyBundle/Resources/translations/admin.en.yml
@@ -29,6 +29,7 @@ zopimID: "zopim ID"
 zopimID_helptext: "Set your ID for zopim here"
 hotjarId: "Hotjar ID"
 HotjarSv: "Hotjar SV"
+hotjarId_helptext: "Set your ID for Hotjar here"
 privacyUrl: "Privacy URL"
 privacyUrl_helptext: "If value is numeric, then will be taken Document by id."
 configuration_save_success: "Configuration for Site <b>%site%</b> saved successfully."
